refactor: init web-based redis client api