@@ -3,13 +3,7 @@ A simple GUI client for Redis.
 
 Jedis client is used at this project for sending commands to Redis. 
 
-![redis-client](./screenshot/main.png)
-![redis-client-create-key](./screenshot/create-key.png)
-
 # Development
-add this argument to VM options
-`--module-path path_of_javafx-sdk/lib --add-modules javafx.controls,javafx.fxml`
-
 To start a redis instance:
 
 `docker pull redis`
@@ -27,7 +21,7 @@ for more details please visit <a href="https://redis.io/commands" target="_blank
 
 # Requirement
 1. JDK 14
-2. JAVAFX 14
+2. Flutter
 3. Redis
 
 # Support
